--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Youtube Search App</title>
-</head>
-<body>
-    <div id="app"></div>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Youtube Search App</title>
+        <style>
+            body, html, #app{
+                margin: 0;
+                height: 100%;
+            }
+        </style>
+    </head>
+
+    <body style="margin: 0">
+        <div id="app"></div>
+    </body>
+
 </html>
